sort.basic.lessons.sort.basic.comb.AlgCombSort11.scala.error
AlgCombSort11: error: not found: value combSort11
		combSort11();
                ^AlgCombSort11:10: error: ambiguous reference to overloaded definition,
both method | in class Int of type (x: Char)Int
and  method | in class Int of type (x: Short)Int
match expected type ?
	if (ecart = 9 | ecart = 10)
                      ^AlgCombSort11:10: error: type mismatch;
 found   : Unit
 required: Boolean
	if (ecart = 9 | ecart = 10)
                  ^